Bug 375394 - application crash if started without root permission
Summary: application crash if started without root permission
Status: RESOLVED FIXED
Alias: None
Product: partitionmanager
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Arch Linux Linux
: NOR crash
Target Milestone: ---
Assignee: Andrius Štikonas
URL:
Keywords: drkonqi
: 375756 376895 377530 380365 380401 (view as bug list)
Depends on:
Blocks:
 
Reported: 2017-01-21 23:53 UTC by mombelli.mauro
Modified: 2017-06-14 14:23 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 3.1.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description mombelli.mauro 2017-01-21 23:53:07 UTC
Application: partitionmanager (3.0.1)

Qt Version: 5.7.1
Frameworks Version: 5.30.0
Operating System: Linux 4.10.0-rc4-mainline x86_64
Distribution (Platform): Archlinux Packages

-- Information about the crash:
- What I was doing when the application crashed:
I choosen to start the application without ROOT permission, as i wanted to only llok at the schema and not modify it

- Custom settings of the application:

The crash can be reproduced every time.

-- Backtrace:
Application: KDE Partition Manager (partitionmanager), signal: Segmentation fault
Using host libthread_db library "/usr/lib/libthread_db.so.1".
[Current thread is 1 (Thread 0x7f98876d4d00 (LWP 2515))]

Thread 4 (Thread 0x7f985b900700 (LWP 2720)):
[KCrash Handler]
#6  0x00007f988710080a in FS::lvm2_pv::getPVs(QList<Device*> const&) () at /usr/lib/libkpmcore.so.4
#7  0x00007f9887122944 in DeviceScanner::scan() () at /usr/lib/libkpmcore.so.4
#8  0x00007f988385dce8 in  () at /usr/lib/libQt5Core.so.5
#9  0x00007f987f64b454 in start_thread () at /usr/lib/libpthread.so.0
#10 0x00007f98831737df in clone () at /usr/lib/libc.so.6

Thread 3 (Thread 0x7f986ca65700 (LWP 2517)):
#0  0x00007f988316a48d in poll () at /usr/lib/libc.so.6
#1  0x00007f987dda2786 in  () at /usr/lib/libglib-2.0.so.0
#2  0x00007f987dda289c in g_main_context_iteration () at /usr/lib/libglib-2.0.so.0
#3  0x00007f9883a8d48b in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/libQt5Core.so.5
#4  0x00007f9883a36e9a in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/libQt5Core.so.5
#5  0x00007f9883859053 in QThread::exec() () at /usr/lib/libQt5Core.so.5
#6  0x00007f98815a2de5 in  () at /usr/lib/libQt5DBus.so.5
#7  0x00007f988385dce8 in  () at /usr/lib/libQt5Core.so.5
#8  0x00007f987f64b454 in start_thread () at /usr/lib/libpthread.so.0
#9  0x00007f98831737df in clone () at /usr/lib/libc.so.6

Thread 2 (Thread 0x7f9874ec2700 (LWP 2516)):
#0  0x00007f988316a48d in poll () at /usr/lib/libc.so.6
#1  0x00007f987d9338e0 in  () at /usr/lib/libxcb.so.1
#2  0x00007f987d935679 in xcb_wait_for_event () at /usr/lib/libxcb.so.1
#3  0x00007f9876e0f789 in  () at /usr/lib/libQt5XcbQpa.so.5
#4  0x00007f988385dce8 in  () at /usr/lib/libQt5Core.so.5
#5  0x00007f987f64b454 in start_thread () at /usr/lib/libpthread.so.0
#6  0x00007f98831737df in clone () at /usr/lib/libc.so.6

Thread 1 (Thread 0x7f98876d4d00 (LWP 2515)):
#0  0x00007f987f65110f in pthread_cond_wait@@GLIBC_2.3.2 () at /usr/lib/libpthread.so.0
#1  0x00007f987d933b57 in  () at /usr/lib/libxcb.so.1
#2  0x00007f987d93539f in  () at /usr/lib/libxcb.so.1
#3  0x00007f987d9354b2 in xcb_wait_for_reply () at /usr/lib/libxcb.so.1
#4  0x00007f9876397f61 in xcb_icccm_get_wm_hints_reply () at /usr/lib/libxcb-icccm.so.4
#5  0x00007f9876e2a654 in QXcbWindow::show() () at /usr/lib/libQt5XcbQpa.so.5
#6  0x00007f9883f87e7b in QWindow::setVisible(bool) () at /usr/lib/libQt5Gui.so.5
#7  0x00007f988474e1cc in QWidgetPrivate::show_sys() () at /usr/lib/libQt5Widgets.so.5
#8  0x00007f98847565f0 in QWidgetPrivate::show_helper() () at /usr/lib/libQt5Widgets.so.5
#9  0x00007f98847593f5 in QWidget::setVisible(bool) () at /usr/lib/libQt5Widgets.so.5
#10 0x00000000004285ec in main ()

Reported using DrKonqi
Comment 1 Andrius Štikonas 2017-01-22 18:08:37 UTC
It crashes for me too.
Comment 2 Andrius Štikonas 2017-01-30 15:47:56 UTC
*** Bug 375756 has been marked as a duplicate of this bug. ***
Comment 3 Andrius Štikonas 2017-02-24 21:11:14 UTC
*** Bug 376895 has been marked as a duplicate of this bug. ***
Comment 4 Andrius Štikonas 2017-02-25 13:46:20 UTC
Git commit 427e37a047898dad0ab8c54aea33473f7854e150 by Andrius Štikonas, on behalf of Alexander Schlarb.
Committed on 25/02/2017 at 13:45.
Pushed by stikonas into branch 'master'.

Prevent the libparted backend from exposing "null devices"

REVIEW: 129968

M  +4    -1    src/plugins/libparted/libpartedbackend.cpp

https://commits.kde.org/kpmcore/427e37a047898dad0ab8c54aea33473f7854e150
Comment 5 Andrius Štikonas 2017-03-12 19:07:06 UTC
*** Bug 377530 has been marked as a duplicate of this bug. ***
Comment 6 Andrius Štikonas 2017-05-30 19:47:47 UTC
*** Bug 380365 has been marked as a duplicate of this bug. ***
Comment 7 Andrius Štikonas 2017-05-31 20:03:42 UTC
*** Bug 380401 has been marked as a duplicate of this bug. ***