Prevent the libparted backend from exposing "null devices"

REVIEW: 129968
BUG: 375394